gitops/application/base/orthweb/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orthweb
  labels:
    service: orthweb
spec:
  type: ClusterIP
  selector:
    app: orth
  ports:
    - name: dicom
      protocol: TCP
      port: 4242
      targetPort: 4242
    - name: http
      protocol: TCP
      port: 8042
      targetPort: 8042
